tests/agl/rejections/type/partial_generic_unsolved.agl
def id[T](x: T) -> T = x

let bad = id(?)
